module/ecs_service_fargate.tf
# Fargate ECS Service
resource "aws_ecs_service" "service" {
  name                               = "${var.namespace}_ECS_Service_${var.environment}"
  cluster                            = aws_ecs_cluster.default.id
  task_definition                    = aws_ecs_task_definition.default.arn  # Indexed for Fargate
  desired_count                      = length(var.containers)
  deployment_minimum_healthy_percent = var.ecs_task_deployment_minimum_healthy_percent
  deployment_maximum_percent         = var.ecs_task_deployment_maximum_percent
  launch_type                        = "FARGATE"

  
  load_balancer {
    target_group_arn = aws_alb_target_group.service_target_group.arn
    container_name   = var.service_name
    container_port   = var.container_port
  }

  network_configuration {
    security_groups  = [aws_security_group.ecs_container_instance.id]  # Indexed for Fargate
    subnets          = aws_subnet.private[*].id
    assign_public_ip = false
  }

  tags = {
    Scenario = var.scenario
  }
}

#################Outputs#####################

# Output for Fargate ECS Service
output "ecs_service_fargate_name" {
  value = aws_ecs_service.service.name
}
